# pg-mvp-prototype

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
.github/workflows/: deploy-pages.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: ai.ts  auth.ts  context.ts  db.ts  enrichment.ts  env.ts  index.ts  origins.ts  seed-demo-auth.ts  trpc.ts
apps/api/src/lib/: authz.ts  serialize.ts
apps/api/src/router/: activity.ts  buyer.ts  copilot.ts  diagnosis.ts  enrichment.ts  index.ts  interaction.ts  opportunity.ts  parser.ts  precall.ts  product.ts  workbench.ts  workspace.ts
apps/desktop-copilot/: index.html  package.json  tsconfig.app.json  tsconfig.node.json
apps/desktop-copilot/docs/: DECISION.md  UX_SPEC.md  audio-capture-and-speaker-separation.md  sales-technique-matching.md  sample-call-jessi-downlando-1.md  test-buyer-scripts.md
apps/desktop-copilot/docs/reference/cluely-onboarding/: README.md
apps/desktop-copilot/latency-tests/: .gitignore  package.json  tsconfig.json
apps/desktop-copilot/latency-tests/baselines/: naive-serial.ts
apps/desktop-copilot/latency-tests/fixtures/: generate-audio.ts  transcript-chunks.json
apps/desktop-copilot/latency-tests/src/: config.ts  fixtures.ts  net.ts  pipeline.ts  prompt.ts  run-set.ts  summary.ts  timing.ts  types.ts
apps/desktop-copilot/latency-tests/src/providers/: openai.ts
apps/desktop-copilot/src/: App.tsx  session.ts  styles.css  vite-env.d.ts
apps/desktop-copilot/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
apps/desktop-copilot/src-tauri/capabilities/: default.json
apps/desktop-copilot/src-tauri/icons/: icon.icns
apps/desktop-copilot/src-tauri/src/: lib.rs  main.rs  realtime.rs
apps/desktop-copilot/src-tauri/src/audio/: mic.rs  mod.rs  system.rs
apps/desktop-copilot/src-tauri/src/planner/: grounding.rs  llm.rs  mod.rs  product.rs  technique.rs
apps/desktop-copilot/src-tauri/src/stt/: deepgram.rs  echo.rs  mod.rs
apps/desktop-copilot/src/api/: auth.ts  client.ts  copilot-data.ts  useBoundCallContext.ts  useResolvedProductContext.ts
apps/desktop-copilot/src/components/: ConnectScreen.tsx  OpportunityPicker.tsx  Overlay.tsx  readiness.ts
apps/desktop-copilot/src/mock/: fake-scrape.ts  fixture.ts  profiles.ts  store.ts  useFixturePlayer.ts
apps/desktop-copilot/src/onboarding/: OnboardingFlow.tsx
apps/desktop-copilot/src/realtime/: useRealtimeEngine.ts
apps/overlay/: package.json  vite.config.ts
apps/overlay/src/: main.tsx  styles.css
apps/overlay/src-tauri/: Cargo.toml  tauri.conf.json
apps/overlay/src-tauri/capabilities/: default.json
apps/overlay/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/public/: sample-activities.csv  sample-daily-workbench.csv  sample-opportunities.csv
apps/web/src/: auth-client.ts  env.ts  main.tsx  routeTree.gen.ts  theme.ts  trpc.ts
apps/web/src/components/: alignment-badge.tsx  error-boundary.tsx
apps/web/src/components/layout/: brand.tsx  color-scheme-toggle.tsx  sidebar.tsx  top-bar.tsx  user-menu.tsx
apps/web/src/components/skeletons/: opportunity-detail-skeleton.tsx  opportunity-list-skeleton.tsx
apps/web/src/features/buyers/: assign-product-control.tsx  buyers-data.ts  buyers-filters.tsx  buyers-page.tsx  buyers-search.ts  buyers-states.tsx  buyers-table.tsx  index.ts
apps/web/src/features/buyers-intake/: activity-import-data.ts  activity-import.tsx  activity-mapping-table.tsx  buyer-dedup-prompt.tsx  buyer-lookup.tsx  candidate-picker.tsx  daily-import.tsx  import-crm-guidance.tsx  import-data.ts  import-mapping-table.tsx  import-review.tsx  index.ts  intake-helpers.ts  intake-page.tsx  intake-search.ts  paste-method.tsx  paste-review.tsx  product-field.tsx  structured-form.tsx
apps/web/src/features/copilot/: connection-panels.tsx  copilot-page.tsx  download-nudge.tsx  download-section.tsx  index.ts  use-start-copilot.tsx
apps/web/src/features/export/: export-pack-page.tsx  export-pack-states.tsx  export-pack-success.tsx  index.ts  pack-row.tsx
apps/web/src/features/onboarding/: onboarding-shell.tsx  question-screen.tsx  step-crm-stages.tsx  step-product.tsx  step-workspace.tsx  types.ts  wizard.tsx
apps/web/src/features/opportunity-detail/: activity-tab.tsx  badges.ts  detail-page.tsx  detail-search.ts  diagnosis-tab.tsx  evidence-tab.tsx  export-tab.tsx  opportunity-header.tsx  outcome-tab.tsx  overview-tab.tsx  precall-intelligence.tsx  score-header.tsx
apps/web/src/features/opportunity-intake/: add-opportunity-modal.tsx  buyer-dedup-prompt.tsx  csv-mapping-table.tsx  csv-preview.tsx  csv-upload.tsx  index.ts  parsed-review.tsx  quick-paste.tsx  structured-form.tsx  submit-helpers.ts
apps/web/src/features/opportunity-list/: empty-state.tsx  filter-sort.ts  filters.tsx  index.ts  opportunity-card.tsx  opportunity-concept-copy.ts  opportunity-list.tsx  opportunity-row.tsx  search-schema.ts  search-sort.tsx
apps/web/src/lib/: copilot.ts  exports.ts  period.ts  relative-time.ts
apps/web/src/mock/: access.ts  buyer-rows.ts  export-pack-rows.ts  fake-activity-mapper.ts  fake-ai.ts  fake-csv-mapper.ts  fake-diagnosis.ts  fake-enrich.ts  fake-import-mapper.ts  fake-precall.ts  fake-scrape.ts  hooks.ts  mock-api.ts  queries.ts  seed.ts  store.ts  types.ts  use-workspace-stages.ts  workbench-rows.ts
apps/web/src/routes/: __root.tsx  _authed.tsx  checkout.tsx  index.tsx  login.tsx  onboarding.tsx  opportunities.$opportunityId.tsx  opportunities.index.tsx  signup.tsx
docs/: decision-log.md  demo-walkthrough.md
(+52 files in other folders)
