[package]
name = "overlay"
version = "0.0.0"
description = "Pitch Genius Live Co-pilot overlay shell spike"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The desktop entry point lives in the lib so the same crate can target mobile later.
name = "overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AppKit interop for the macOS-only window behaviors that Tauri does not expose
# (NSWindow level + collectionBehavior in PG-244). Declared now so the interop
# path compiles as part of the scaffold; used in later M21 issues.
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.release]
# Small release binary for the bundle-size NFR (PG-246).
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
