[package]
name = "overlay"
version = "0.0.0"
description = "Pitch Genius Live Co-pilot overlay shell spike"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The desktop entry point lives in the lib so the same crate can target mobile later.
name = "overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The overlay must draw over OTHER apps' fullscreen Spaces. A plain NSWindow
# can't on macOS — even at screen-saver level with canJoinAllSpaces
# (tauri-apps/tauri#11488); only an NSPanel can. tauri-nspanel subclasses our
# window into an NSPanel in place and re-exports objc2/objc2-app-kit for the
# level + collection-behavior calls (PG-244).
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[profile.release]
# Small release binary for the bundle-size NFR (PG-246).
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
